      settings (AZAWAWI)
    - Fixed an incorrect default value display bug in advanced preferences
      when it is toggled (AZAWAWI)
    - Fixed ticket #858 Recent files does not display anything on Padre startup
      (AZAWAWI)
    - Refresh all menus at startup. This prevents "nothing" open mode (i.e. no
      document) from incorrectly showing an enabled menubar (AZAWAWI)

0.57 2010.02.18 - **WARNING Contains new threading code**
    - Spawn a master thread very early in the startup process. Use that
      master to create worker threads as necessary. Cuts down on memory
      usage and fixes the "Leaked Scalars" warning (BRAMBLE, SMUELLER)
    - Fix pluginmanager error dialog for plugin-event failure (BRAMBLE)
    - Add status messages for Padre::File operations (SEWI)
    - Select some files to close (SEWI)
    - Select some files to reload (SEWI)
    - GotoLine is now called Goto dialog (AZAWAWI)
    - Goto dialog is now non-modal lazy single instance dialog (AZAWAWI)
    - Goto dialog has a current positon/line number field (AZAWAWI)
    - Regex editor dialog is now more compact and it includes regex helper
      buttons (AZAWAWI)
    - Regex editor dialog can now highlight matched text (AZAWAWI)
    - Regex editor dialog can now display regex description (AZAWAWI)
    - Implemented Replace (aka substitution) in Regex editor (AZAWAWI)
    - Right click "Edit with Regex Editor" now works on user-selected
      text (AZAWAWI)
    - Added "headline" method to Padre::Project, which allows a project
      to try and intuit the "primary" file in the project (for a CPAN
      distribution of Foo::Bar this will be lib/Foo/Bar.pm) (ADAMK)
    - Removed the final usage of the "Provider" phrasing, and made more
      of the modules used by the Perl help provider run-time loaded (ADAMK)
    - Moved padre.exe build from bin to win32-loader folder since bin is a
      bad path for putting the Padre win32 launcher code (SMUELLER, AZAWAWI)